# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\ThreadController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -23,13 +24,18 @@ Route::prefix('v1')
     ->name('v1.')
     ->group(function() {
 
-        Route::get('user', function (Request $request) {
+//        Route::get('user', function (Request $request) {
+//            dd($request);
+//            return $request->user();
+//        })->name('user');
 
-            dd($request);
+        Route::post('auth', [AuthController::class, 'create'])
+            ->name('auth');
 
-            return $request->user();
-        })->name('user');
+        Route::middleware('auth.sanctum')->group(function() {
 
-        Route::apiResource('threads', ThreadController::class);
+            Route::apiResource('threads', ThreadController::class);
+
+        });
 
     });
